examples/static-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-app
spec:
  selector:
    app: nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
